--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 
 # API Configuration
 # Backend API URL - change this to your backend URL when available
-NEXT_PUBLIC_API_URL=http://localhost:3001/api
+NEXT_PUBLIC_API_URL=http://localhost:4000/api/v1
 
 # Development
 NODE_ENV=development
